--- a/general/managing_apps.html
+++ b/general/managing_apps.html
@@ -120,7 +120,7 @@ calls the desired application.  The index.php file can be named anything you wan
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="profiling.html">Profiling Your Application</a>
+上個主題:&nbsp;&nbsp;<a href="profiling.html">Application 效能分析</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
