--- a/libraries/benchmark.html
+++ b/libraries/benchmark.html
@@ -70,7 +70,7 @@ Benchmarking 類別
 
 <ul>
 <li><a href="#using">使用 Benchmark 類別</a></li>
-<li><a href="#profiler">Profiling Your Benchmark Points</a></li>
+<li><a href="#profiler">Benchmark 點的效能分析</a></li>
 <li><a href="#execution">顯示全部的執行時間</a></li>
 <li><a href="#memory">顯示記憶體消耗量</a></li>
 </ul>
@@ -116,7 +116,7 @@ echo $this->benchmark->elapsed_time('dog'，'bird');</code>
 
 
 <a name="profiler"></a>
-<h2>Profiling Your Benchmark Points</h2>
+<h2>Benchmark 點的效能分析</h2>
 
 <p>If you want your benchmark data to be available to the
 <a href="../general/profiling.html">Profiler</a> all of your marked points must be set up in pairs，and
