--- a/toc.html
+++ b/toc.html
@@ -110,7 +110,7 @@
 	<li><a href="./general/routing.html">URI Routing</a></li>
 	<li><a href="./general/errors.html">錯誤處理</a></li>
 	<li><a href="./general/caching.html">快取</a></li>
-	<li><a href="./general/profiling.html">Profiling Your Application</a></li>
+	<li><a href="./general/profiling.html">Application 效能分析</a></li>
 	<li><a href="./general/managing_apps.html">管理 Applications</a></li>
 	<li><a href="./general/alternative_php.html">變換 PHP 句法</a></li>
 	<li><a href="./general/security.html">安全性</a></li>
