--- a/general/managing_apps.html
+++ b/general/managing_apps.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>管理你的 Applications : CodeIgniter 使用手冊</title>
+<title>管理 Applications : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-管理你的 Applications
+管理 Applications
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>管理你的 Applications</h1>
+<h1>管理 Applications</h1>
 
 <p>By default it is assumed that you only intend to use CodeIgniter to manage one application，which you will build in your
 <dfn>system/application/</dfn> directory.  It is possible，however，to have multiple sets of applications that share a single
