alternative php syntax

--- a/general/alternative_php.html
+++ b/general/alternative_php.html
@@ -99,15 +99,14 @@
 <br />
 &lt;/ul></code>
 
-<p>Notice that there are no braces.  Instead，the end brace is replaced with <var>endforeach</var>.
-Each of the control structures listed above has a similar closing syntax:
-<var>endif</var>，<var>endfor</var>，<var>endforeach</var>，and <var>endwhile</var></p>
+<p>請注意這邊沒有結束括號，而是以 <var>endforeach</var> 來取代。下列的所有控制結構有相同的結束句法(closing syntax):
+<var>endif</var>，<var>endfor</var>，<var>endforeach</var>，以及 <var>endwhile</var>。</p>
 
 <p>
-Also notice that instead of using a semicolon after each structure (except the last one)，there is a colon.  
-這很重要！</p>
 
-<p>這邊還有別的範例，使用 if/elseif/else 控制結構。.請留意分號的地方:</p>
+也請注意到，在每個結構之後(除了最後一個)使用的不分號(;)，而是冒號(:)。這很容易稿錯。</p>
+
+<p>這邊還有別的範例，使用 if/elseif/else 控制結構。請留意分號的地方:</p>
 
 
 <code><var>&lt;?php if ($username == 'sally'): ?></var><br />
