--- a/doc_style/index.html
+++ b/doc_style/index.html
@@ -57,9 +57,9 @@
 
 <h1>撰寫文件</h1>
 
-<p>To help facilitate a consistent，easy-to-read documentation style for CodeIgniter projects，Ellislab is making the markup and CSS from the CodeIgniter user guide freely available to the community for their use. For your convenience，a template file has been created that includes the primary blocks of markup used with brief samples.</p>
+<p>為了協助 CodeIgniter 專案能夠有一致、易讀的文件樣式。Ellislab 建立給 CodeIgniter 使用手冊所用的標記語言以及 CSS 樣式可以提供給社群使用。為了你的方便，已經建立好的樣板檔包含簡單的 samples 可以直接參考取用。</p>
 
-<h2>Files</h2>
+<h2>檔案</h2>
 
 <ul>
 	<li><a href="../userguide.css">Stylesheet</a></li>
