--- a/general/credits.html
+++ b/general/credits.html
@@ -77,7 +77,7 @@ bringing frameworks into the general consciousness of the web community.</p>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="../installadownloads.html"> 下載 CodeIgniter</a>
+下個主題:&nbsp;&nbsp;<a href="../installation/downloads.html"> 下載 CodeIgniter</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
