--- a/overview/at_a_glance.html
+++ b/overview/at_a_glance.html
@@ -60,7 +60,7 @@
 
 <h2>CodeIgniter 是個程式 Framework</h2>
 
-<p>CodeIgniter 是讓人建構 PHP 網頁應用程式的工具組。當你打算從頭開發時，CodeIgniter 針對了常用的需求提供豐富的程式庫，並有藉由間單的操作介面和邏輯結構來存取這些程式庫，目的是讓你在開發專案時可以更加快速。CodeIgniter 只需要使用最少量的程式碼，讓你的創造力可以專注在開發專案。</p>
+<p>CodeIgniter 是讓人建構 PHP 網頁應用程式的工具組。當你打算從頭開發時，CodeIgniter 針對了常用的需求提供豐富的程式庫，並可藉由間單的操作介面和邏輯結構來存取這些程式庫，目的是讓你在進行開發專案可以更加快速。CodeIgniter 只需要使用最少量的程式碼，讓你的創造力可以專注在開發專案。</p>
 
 <h2>CodeIgniter 可自由取得</h2>
 <p>CodeIgniter 採用 Apache/BSD-style open source license 授權，所以你可以隨心所欲使用。詳細的授權內容請閱讀 <a href="../license.html">許可協議</a>。</p>
