complete Translate language class

--- a/helpers/language_helper.html
+++ b/helpers/language_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Language 補助函數 : CodeIgniter 使用手冊</title>
+<title>語言(Language)補助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -43,7 +43,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Language 補助函數
+語言(Language)補助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -57,17 +57,17 @@ Language 補助函數
 <div id="content">
 
 
-<h1>Language 補助函數</h1>
+<h1>語言(Language)補助函數</h1>
 
-<p>The Language 補助函數 file contains functions that assist in working with language files.</p>
+<p>語言(Language)補助函數包含一些用於補助處理語言檔案的函數.</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入補助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>此補助函數用法如下:</p>
 <code>$this->load->helper('language');</code>
 
-<p>The following functions are available:</p>
+<p>下面的函數就可以使用了:</p>
 
 <h2>lang('<var>language line</var>'，'<var>element id</var>')</h2>
 
