--- a/libraries/language.html
+++ b/libraries/language.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Language 類別 : CodeIgniter 使用手冊</title>
+<title>語言(Language)類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -56,67 +56,64 @@ Language 類別
 <div id="content">
 
 
-<h1>Language 類別</h1>
+<h1>語言(Language)類別</h1>
 
-<p>The Language 類別 provides functions to retrieve language files and lines of text for purposes of internationalization.</p>
+<p>語言(Language)類別提供了函式去解析語言文件和文本行（lines of text）以實現多國語言語系製作。</p>
 
-<p>In your CodeIgniter system folder you'll find one called <dfn>language</dfn> containing sets of language files.  You can create
-your own language files as needed in order to display error and other messages in other languages.</p>
+<p>在您的 CodeIgniter 系統底下，您會找到 <dfn>language</dfn> 目錄，裡面包含了各種語系的檔案。
+   當您為了顯示另外一種語言的錯誤訊息或者其他一些訊息，您可以建立屬於您自己的語言檔案。</p>
 
-<p>Language files are typically stored in your <dfn>system/language</dfn> directory.  Alternately you can create a folder called <kbd>language</kbd> inside
-your <kbd>application</kbd> folder and store them there.  CodeIgniter will look first in your <dfn>system/application/language</dfn>
-directory.  If the directory does not exist or the specified language is not located there CI will instead look in your global
-<dfn>system/language</dfn> folder.</p>
+<p>語系檔案一般都是放在 <dfn>system/language</dfn> 目錄底下。或者是您可以在 <kbd>application</kbd> 目錄底下建立 <kbd>language</kbd> 目錄。
+CodeIgniter 會首先找尋 <dfn>system/application/language</dfn>
+目錄，如果上述的目錄不存在或者是要搜尋的檔案找不到，CodeIgniter 就會全域的找尋 <dfn>system/language</dfn> 目錄。</p>
 
-<p class="important"><strong>注意:</strong>&nbsp; Each language should be stored in its own folder.  For example，the English files are located at:
+<p class="important"><strong>注意:</strong>&nbsp; 每一種語言都有各自的目錄。例如，英文語系檔案將會放在底下目錄:
 <dfn>system/language/english</dfn></p>
 
 
 
-<h2>Creating Language Files</h2>
+<h2>建立語言檔案</h2>
 
-<p>Language files must be named with <kbd>_lang.php</kbd> as the file extension.  For example，let's say you want to create a file
-containing error messages.  You might name it:  <kbd>error_lang.php</kbd></p>
+<p>語言檔案的命名最後必須是 <kbd>_lang.php</kbd>。例如，您想建立一個錯誤訊息的語言檔案，您可以這樣命名：<kbd>error_lang.php</kbd></p>
 
-<p>Within the file you will assign each line of text to an array called <var>$lang</var> with this prototype:</p>
+<p>在此文件中，在每一行語言您都可以賦予 <var>$lang</var> 陣列方式表示:</p>
 
 <code>$lang['language_key'] = "The actual message to be shown";</code>
 
-<p><strong>注意:</strong> It's a good practice to use a common prefix for all messages in a given file to avoid collisions with
-similarly named items in other files.  For example，if you are creating error messages you might prefix them with <var>error_</var></p>
+<p><strong>注意:</strong> 為了避免和其他檔案變數名稱重複，最好把同一個文件的變數字首前端都加上同名稱，比如，可以把每個錯誤訊息字首都加上 <var>error_</var></p>
 
 <code>$lang['<var>error</var>_email_missing'] = "You must submit an email address";<br />
 $lang['<var>error</var>_url_missing'] = "You must submit a URL";<br />
 $lang['<var>error</var>_username_missing'] = "You must submit a username";</code>
 
 
-<h2>Loading A Language File</h2>
+<h2>讀取單一語言檔案</h2>
 
-<p>In order to fetch a line from a particular file you must load the file first.  Loading a language file is done with the following code:</p>
+<p>使用檔案資料之前，您必須先將檔案載入，利用下面方式取得資料:</p>
 
 <code>$this->lang->load('<samp>filename</samp>'，'<dfn>language</dfn>');</code>
 
-<p>Where <samp>filename</samp> is the name of the file you wish to load (without the file extension)，and <dfn>language</dfn>
-is the language set containing it (ie，english).  If the second parameter is missing，the default language set in your
-<kbd>application/config/config.php</kbd> file will be used.</p>
+<p><samp>filename</samp> 是你要讀取的檔案名稱(不需要加上副檔名)，<dfn>language</dfn>
+是哪個語言所包含的檔案 (例如，english). 假如沒有設定第二個參數，將會使用
+<kbd>application/config/config.php</kbd> 的預設語言。</p>
 
 
-<h2>Fetching a Line of Text</h2>
+<h2>取出資料</h2>
 
-<p>Once your desired language file is loaded you can access any line of text using this function:</p>
+<p>一旦語言檔案被載入，您可以利用底下方式取得其中任一值：</p>
 
 <code>$this->lang->line('<samp>language_key</samp>');</code>
 
-<p>Where <samp>language_key</samp> is the array key corresponding to the line you wish to show.</p>
+<p><samp>language_key</samp> 是您要顯示字串的索引值。</p>
 
-<p>注意: This function simply returns the line.  It does not echo it for you.</p>
+<p>注意: 這個函數只是簡單回傳返回值。它並非是顯示值(It does not echo it for you).</p>
 
-<h3>Using language lines as form labels</h3>
+<h3>使用語言作為表單 Label</h3>
 
 <p class="important">This feature has been deprecated from the language library and moved to the <kbd>lang()</kbd> function of the <a href="../helpers/language_helper.html">Language helper</a>.</p>
 
-<h2>Auto-loading Languages</h2>
-<p>If you find that you need a particular language globally throughout your application，you can tell CodeIgniter to <a href="../general/autoloader.html">auto-load</a> it during system initialization. This is done by opening the application/config/autoload.php file and adding the language(s) to the autoload array.</p>
+<h2>自動載入語系檔案</h2>
+<p>如果要在整個程式架構載入一個特定的語言，您可以在 CodeIgniter 系統初始化的時候<a href="../general/autoloader.html">自動載入</a>語言檔案. 您可以修改 application/config/autoload.php 檔案，並且加入您想要預設載入的語言。</p>
 <p>&nbsp;</p>
 </div>
 <!-- END CONTENT -->
