--- a/general/urls.html
+++ b/general/urls.html
@@ -79,7 +79,7 @@ URLS
 </ol>
 
 <p><a href="../libraries/uri.html">URI 類別</a> 以及 <a href="../helpers/url_helper.html">URL 補助函數</a> 兩者裡頭有
-些 functions 可以讓你輕鬆的處理 URI 資料，除此之外，你的 URLs 可以用 <a href="routing.html">URI Routing</a> 對映(remap)的功能，使用上將會更有彈性。</p>
+些函數可以讓你輕鬆的處理 URI 資料，除此之外，你的 URLs 可以用 <a href="routing.html">URI Routing</a> 對映(remap)的功能，使用上將會更有彈性。</p>
 
 
 <h2>移除 index.php 檔案</h2>
