--- a/general/core_classes.html
+++ b/general/core_classes.html
@@ -57,20 +57,17 @@
 
 <h1>新增系統核心類別</h1>
 
-<p>Every time CodeIgniter runs there are several base classes that are initialized automatically as part of the core framework.
-It is possible，however，to swap any of the core system classes with your own versions or even extend the core versions.</p>
+<p>每次 CodeIgniter 執行時，有幾個基礎類別會自動初始化，成為核心框架的一部分。
+不過還是有可能用你自己的版本來置換甚至擴充這些系統核心類別。</p>
 
-<p><strong>Most users will never have any need to do this,
-but the option to replace or extend them does exist for those who would like to significantly alter the CodeIgniter core.</strong>
-</p>
+<p><strong>大部分的使用者永遠不會需要這樣做，但是這個選項還是保留給那些想要大幅置換或擴充 CodeIgniter 核心的人。</strong></p>
 
-<p class="important"><strong>注意:</strong>&nbsp; Messing with a core system class has a lot of implications，so make sure you
-know what you are doing before attempting it.</p>
+<p class="important"><strong>注意：</strong>介入核心系統可能引發許多隱藏的問題，所以請在這麼做之前確定你知道你自己在做什麼。</p>
 
 
 <h2>系統類別列表</h2>
 
-<p>The following is a list of the core system files that are invoked every time CodeIgniter runs:</p>
+<p>以下是一個系統核心檔案的清單，每次 CodeIgniter 執行時都會呼叫他們：</p>
 
 <ul>
 <li>Benchmark</li>
@@ -89,15 +86,16 @@ know what you are doing before attempting it.</p>
 
 <h2>更換核心類別</h2>
 
-<p>To use one of your own system classes instead of a default one simply place your version inside your local <dfn>application/libraries</dfn> directory:</p>
+<p>要用你自己的系統核心類別來置換預設的，只要將你自己的版本放在 <dfn>application/libraries</dfn> 目錄裡：</p>
 
 <code>application/libraries/<dfn>some-class.php</dfn></code>
 
-<p>If this directory does not exist you can create it.</p>
+<p>如果這個目錄不存在，你可以自己新增。</p>
 
-<p>Any file named identically to one from the list above will be used instead of the one normally used.</p>
+<p>任何與在上述清單中檔案名稱相符的檔案都會被載入，取代系統正常使用的。</p>
 
-<p>Please note that your class must use <kbd>CI</kbd> as a prefix. For example，if your file is named <kbd>Input.php</kbd> the class will be named:</p>
+<p>請注意，你的類別名稱必須使用 <kbd>CI</kbd> 作為前置字串。例如，如果你的檔案名稱是 <kbd>Input.php</kbd> ，那類別名稱將是：
+</p>
 
 <code>
 class CI_Input {<br /><br />
@@ -109,23 +107,21 @@ class CI_Input {<br /><br />
 
 <h2>擴充核心類別</h2>
 
-<p>If all you need to do is add some functionality to an existing library - perhaps add a function or two - then
-it's overkill to replace the entire library with your version.  In this case it's better to simply extend the class.
-Extending a class is nearly identical to replacing a class with a couple exceptions:</p>
+<p>如果你所要做的只是在現存程式庫中加入一些功能，例如增加一兩個函數，那置換掉整個程式庫就太過火了。在這個狀況下，擴充類別是比較好的做法。擴充一個類別與用一些例外來取代一個類別幾乎是相同的：</p>
 
 <ul>
-<li>The class declaration must extend the parent class.</li>
-<li>Your new class name and filename must be prefixed with <kbd>MY_</kbd> (this item is configurable.  See below.).</li>
+<li>類別宣告必須繼承(extend)父類別</li>
+<li>你的新類別名稱與檔名必須使用 <kbd>MY_</kbd> 前置字串（這是可設定的，請見下述）。</li>
 </ul>
 
-<p>For example，to extend the native <kbd>Input</kbd> class you'll create a file named <dfn>application/libraries/</dfn><kbd>MY_Input.php</kbd>，and declare your class with:</p>
+<p>例如，要擴充一個內建的 <kbd>Input</kbd> 類別，你要先新增檔名為 <dfn>application/libraries/</dfn><kbd>MY_Input.php</kbd> 的檔案，然後這樣宣告你的類別：/p>
 
 <code>
 class MY_Input extends CI_Input {<br /><br />
 
 }</code>
 
-<p>注意: If you need to use a constructor in your class make sure you extend the parent constructor:</p>
+<p>注意：如果你需要在你的類別中使用建構函數(constructor)，確定有在裡面擴充父類別的建構函數(constructor)：</p>
 
 <code>
 class MY_Input extends CI_Input {<br />
@@ -136,11 +132,10 @@ class MY_Input extends CI_Input {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;}<br />
 }</code>
 
-<p class="important"><strong>Tip:</strong>&nbsp; Any functions in your class that are named identically to the functions in the parent class will be used instead of the native ones
-(this is known as "method overriding").
-This allows you to substantially alter the CodeIgniter core.</p>
+<p class="important"><strong>提示：</strong> 你類別中任何與父類別中相同名稱的函數，將會取代父類別的（這一般叫做 "方法覆蓋method overriding"）。這個方式允許你實質上改變 CodeIgniter 的核心。
+</p>
 
-<p>If you are extending the Controller core class，then be sure to extend your new class in your application controller's constructors.</p>
+<p>如果你要擴充控制器(controller)核心類別，請確定有在你的應用程式控制器(controller)的建構函數(constructor)中擴充你的新類別。</p>
 
 <code>class Welcome extends MY_Controller {<br />
 <br />
@@ -157,11 +152,11 @@ This allows you to substantially alter the CodeIgniter core.</p>
 
 <h3>自訂子類別的前置字串</h3>
 
-<p>To set your own sub-class prefix，open your <dfn>application/config/config.php</dfn> file and look for this item:</p>
+<p>要設定你自己的子類別前置字串，請編輯你的 <dfn>application/config/config.php</dfn> 檔案並修改下面的項目：</p>
 
 <code>$config['subclass_prefix'] = 'MY_';</code>
 
-<p>Please note that all native CodeIgniter libraries are prefixed with <kbd>CI_</kbd> so DO NOT use that as your prefix.</p>
+<p>請注意，所有的 CodeIgniter 內建程式庫都使用 <kbd>CI_</kbd> 前置字串，所以不要用它來當作你自己的前置字串。</p>
 
 
 
