--- a/general/common_functions.html
+++ b/general/common_functions.html
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-自動載入資源
+通用函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -57,9 +57,9 @@
 
 <h1>通用函數(Common Functions)</h1>
 
-<p>CodeIgniter uses a few functions for its operation that are globally defined，and are available to you at any point. These do not require loading any libraries or helpers.</p>
+<p>CodeIgniter 使用少許幾個全域函數來協助運行，你也可以在任何時候呼叫它們。這不需要載入任何程式庫或是補助函數。</p>
 <h2>is_really_writable('<var>path/to/file</var>')</h2>
-<p>is_writable() returns TRUE on Windows servers when you really can't write to the file as the OS reports to PHP as FALSE only if the read-only attribute is marked. This function determines if a file is actually writable by attempting to write to it first. Generally only recommended on platforms where this information may be unreliable.</p>
+<p>在Windows伺服器上，除非檔案屬性標示成唯讀否則作業系統不會傳回 FALSE，結果就是即使你真的無法寫入檔案 is_writable() 仍然可能返回 TRUE 。這個函數會先嘗試寫入檔案來確認它是否真的可以寫入。一般只有在平台不可靠時才建議你是用這個函數。</p>
 <code>if (is_really_writable('file.txt'))<br />
 {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo &quot;I could write to this if I wanted to&quot;;<br />
@@ -69,9 +69,9 @@ else<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo &quot;File is not writable&quot;;<br />
 }</code>
 <h2>config_item('<var>item_key</var>')</h2>
-<p>The <a href="../libraries/config.html">Config library</a> is the preferred way of accessing configuration information，however config_item() can be used to retrieve single keys. See Config library documentation for more information.</p>
+<p><a href="../libraries/config.html">Config library</a> 是存取設定資訊時建議使用的方法，不過 config_item() 也能用來取得單獨的鍵值。參閱 <a href="../libraries/config.html">Config library</a> 文件來獲得更多資訊。</p>
 <h2>show_error('<var>message</var>')，show_404('<var>page</var>')，log_message('<var>level</var>'，'<samp>message</samp>')</h2>
-<p>These are each outlined on the <a href="errors.html">錯誤處理</a> page.</p>
+<p>這些在 <a href="errors.html">錯誤處理</a> 文件中有說明。</p>
 </div>
 <!-- END CONTENT -->
 
