style guide. fixed

--- a/changelog.html
+++ b/changelog.html
@@ -200,7 +200,7 @@ SVN Revision: 1541</p>
 	</li>
 	<li>Other Changes
 		<ul>
-			<li>Added <a href="./general/styleguide.html">PHP 樣式指南</a> to docs.</li>
+			<li>Added <a href="./general/styleguide.html">PHP 風格指南</a> to docs.</li>
 			<li>Added sanitization in <kbd>xss_clean()</kbd> for a deprecated HTML tag that could be abused in user input in Internet Explorer.</li>
 			<li>Added a few openxml document mime types，and an additional mobile agent to mimes.php and user_agents.php respectively.</li>
 			<li>Added a file lock check during caching，before trying to write to the file.</li>
