--- a/general/styleguide.html
+++ b/general/styleguide.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>樣式指南 : CodeIgniter 使用手冊</title>
+<title>風格指南 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -48,7 +48,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-樣式指南
+風格指南
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -64,7 +64,7 @@
 
 <h1>基本樣式及語法</h1>
 
-<p>The following page describes the coding rules use adhere to when developing CodeIgniter.</p>
+<p>下列說明開發 CodeIgniter 時，所需遵守的編碼規則。</p>
 
 
 <h2>目錄</h2>
