--- a/doc_style/index.html
+++ b/doc_style/index.html
@@ -74,7 +74,7 @@
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="../general/styleguide.html">PHP 樣式指南</a>
+上個主題:&nbsp;&nbsp;<a href="../general/styleguide.html">PHP 風格指南</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
